--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="{{ site.baseurl }}/icon.png">
   <!-- Place favicon.ico in the root directory -->
+  <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico" />
 
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
