--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
     background-size: cover;
     filter: blur(16px);
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
