--- a/_layouts/song.html
+++ b/_layouts/song.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: asd
+ptitle: '{{ page.artists | join: ", " }} - {{ page.sname }}'
 ---
-<h1>{{ page.artists | join: ", " }} - {{ page.sname }}</h1>
