Using song ID (again) and manually setting all titles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} - HS Fanpage</title>
+    <title>{{ page.title | flatify }} - HS Fanpage</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
