--- a/_includes/songlist.html
+++ b/_includes/songlist.html
@@ -14,6 +14,6 @@
                 {{ artistName }}
             {%- endif -%}
         {%- endfor -%}
-        {% comment %} Space needed {% endcomment %} - <a href="{{ site.baseurl }}/{{ song.sname | datapage_url: 'songs' }}">{{ song.sname }}</a>
+        {% comment %} Space needed {% endcomment %} - <a href="{{ site.baseurl }}/{{ song.sid | datapage_url: 'songs' }}">{{ song.sname }}</a>
     </p>
 </div>
