--- a/_layouts/artist.html
+++ b/_layouts/artist.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: page.name
+title: '{{ page.sname }}'
 ptitle: '{{ page.sname }}'
 ---
 <h2>{{ page.position }}</h2>
@@ -16,6 +16,6 @@ ptitle: '{{ page.sname }}'
             {% endif %}
         {% endfor %}
         {% if found == false %} {% continue %} {% endif %}
-    <li><a href="{{ site.baseurl }}/songs{{ song.sname | datapage_url: songs }}">{{ song.artists | join: ", " }} - {{ song.sname }}</a></li>
+    <li><a href="{{ site.baseurl }}/songs{{ song.sid | datapage_url: songs }}">{{ song.artists | join: ", " }} - {{ song.sname }}</a></li>
     {% endfor %}
 </ul>
